use invoice payload in views
