# api/app/controllers/api/v1/organization/completion_snapshots_controller.rb
@@ -20,6 +20,19 @@ class Api::V1::Organization::CompletionSnapshotsController < Api::V1::ApiV1Contr
     end
   end
 
+  # GET /api/v1/project_versions/:project_version_id/completion_snapshots/new_completion_snapshot_data
+  def new_completion_snapshot_data
+    project_version = policy_scope(Organization::ProjectVersion).find(params[:project_version_id])
+    unless project_version.is_last_version?
+      raise Error::UnauthorizedError, "Cannot build completion data for a version that is not the last one"
+    end
+
+    new_snapshot = project_version.completion_snapshots.new
+    new_snapshot.invoice = Organization::BuildInvoiceFromCompletionSnapshot.call(new_snapshot, Time.current)
+
+    render json: Organization::CompletionSnapshots::NewCompletionSnapshotDataDto.new({ result: new_snapshot }).to_json
+  end
+
   # PUT /api/v1/organization/completion_snapshots/:id
   def update
     snapshot = policy_scope(Organization::CompletionSnapshot).find(params[:id])
