# api/app/dtos/organization/items/extended_dto.rb
@@ -1,5 +1,6 @@
 class Organization::Items::ExtendedDto < OpenApiDto
   field "id", :integer
+  field "original_item_uuid", :string
   field "position", :integer
   field "name", :string
   field "description", :string, required: false
