# api/app/dtos/organization/project_show_response_dto.rb
@@ -7,6 +7,7 @@ end
 
 class Organization::ProjectShowResponseProjectItemDto < OpenApiDto
   field "id", :integer
+  field "original_item_uuid", :string
   field "position", :integer
   field "name", :string
   field "description", :string, required: false
