# api/swagger/v1/swagger.yaml
@@ -698,6 +698,31 @@ paths:
                     type: array
                     items:
                       "$ref": "#/components/schemas/Organization::CompletionSnapshots::CompactDto"
+  "/api/v1/organization/project_versions/{project_version_id}/completion_snapshots/new_completion_snapshot_data":
+    parameters:
+    - name: project_version_id
+      in: path
+      required: true
+      schema:
+        type: integer
+    get:
+      summary: Get the draft completion snapshot data
+      tags:
+      - Completion snapshot
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: draft completion snapshot
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                - result
+                properties:
+                  result:
+                    "$ref": "#/components/schemas/Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftCompletionSnapshot"
   "/api/v1/organization/companies/{company_id}/projects/{project_id}/versions":
     get:
       summary: List all the project's versions
@@ -1832,6 +1857,173 @@ components:
           type: array
           items:
             "$ref": "#/components/schemas/Organization::CompletionSnapshots::CompactDto"
+    Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftInvoice::ProjectVersion:
+      type: object
+      required:
+      - date
+      - number
+      properties:
+        date:
+          type: string
+          format: date-time
+        number:
+          type: integer
+    Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftInvoice::ProjectContext:
+      type: object
+      required:
+      - name
+      - version
+      - total_amount
+      - previously_billed_amount
+      - remaining_amount
+      properties:
+        name:
+          type: string
+        version:
+          "$ref": "#/components/schemas/Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftInvoice::ProjectVersion"
+        total_amount:
+          type: string
+          format: decimal
+        previously_billed_amount:
+          type: string
+          format: decimal
+        remaining_amount:
+          type: string
+          format: decimal
+    Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftInvoice::Item:
+      type: object
+      required:
+      - id
+      - original_item_uuid
+      - name
+      - item_group_id
+      - quantity
+      - unit
+      - unit_price_amount
+      - total_amount
+      - previously_invoiced_amount
+      - completion_percentage
+      - completion_amount
+      - invoice_amount
+      properties:
+        id:
+          type: integer
+        original_item_uuid:
+          type: string
+        name:
+          type: string
+        description:
+          type: string
+          nullable: true
+        item_group_id:
+          type: integer
+        quantity:
+          type: integer
+        unit:
+          type: string
+        unit_price_amount:
+          type: string
+          format: decimal
+        total_amount:
+          type: string
+          format: decimal
+        previously_invoiced_amount:
+          type: string
+          format: decimal
+        completion_percentage:
+          type: string
+          format: decimal
+        completion_amount:
+          type: string
+          format: decimal
+        invoice_amount:
+          type: string
+          format: decimal
+    Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftInvoice::ItemGroup:
+      type: object
+      required:
+      - id
+      - name
+      - position
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        position:
+          type: integer
+        description:
+          type: string
+          nullable: true
+    Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftInvoice::Transaction:
+      type: object
+      required:
+      - total_excl_tax_amount
+      - tax_rate
+      - tax_amount
+      - retention_guarantee_amount
+      - retention_guarantee_rate
+      - items
+      - item_groups
+      - invoice_total_amount
+      properties:
+        total_excl_tax_amount:
+          type: string
+          format: decimal
+        tax_rate:
+          type: string
+          format: decimal
+        tax_amount:
+          type: string
+          format: decimal
+        retention_guarantee_amount:
+          type: string
+          format: decimal
+        retention_guarantee_rate:
+          type: string
+          format: decimal
+        items:
+          type: array
+          items:
+            "$ref": "#/components/schemas/Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftInvoice::Item"
+        item_groups:
+          type: array
+          items:
+            "$ref": "#/components/schemas/Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftInvoice::ItemGroup"
+        invoice_total_amount:
+          type: string
+          format: decimal
+    Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftInvoice::Payload:
+      type: object
+      required:
+      - project_context
+      - transaction
+      properties:
+        project_context:
+          "$ref": "#/components/schemas/Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftInvoice::ProjectContext"
+        transaction:
+          "$ref": "#/components/schemas/Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftInvoice::Transaction"
+    Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftInvoice:
+      type: object
+      required:
+      - payload
+      properties:
+        payload:
+          "$ref": "#/components/schemas/Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftInvoice::Payload"
+    Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftCompletionSnapshot:
+      type: object
+      required:
+      - invoice
+      properties:
+        invoice:
+          "$ref": "#/components/schemas/Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftInvoice"
+    Organization::CompletionSnapshots::NewCompletionSnapshotDataDto:
+      type: object
+      required:
+      - result
+      properties:
+        result:
+          "$ref": "#/components/schemas/Organization::CompletionSnapshots::NewCompletionSnapshotDataDto::DraftCompletionSnapshot"
     Organization::CompletionSnapshots::PreviousDto:
       type: object
       required: []
@@ -2107,6 +2299,7 @@ components:
       type: object
       required:
       - id
+      - original_item_uuid
       - position
       - name
       - quantity
@@ -2115,6 +2308,8 @@ components:
       properties:
         id:
           type: integer
+        original_item_uuid:
+          type: string
         position:
           type: integer
         name:
